platform/www-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: default
  labels:
    app: landing-page
spec:
  selector:
    app: landing-page
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
